fixing the depraction warning for sass

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@nuxt/content": "^1.14.0",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
-  },
-  "devDependencies": {
+    "nuxt": "^2.15.3",
+    "sass": "~1.32.6",
     "@nuxtjs/vuetify": "^1.11.3"
+  },
+  "resolutions": {
+    "@nuxtjs/vuetify/**/sass": "1.32.12"
   }
 }
