--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@master
       - name: Push to prod server
         run: | 
-            ssh-keyscan -t rsa dev.fixrs.dev >> ~/.ssh/known_hosts
+            ssh-keyscan -t rsa dev.fixrs.dev > ~/.ssh/known_hosts
             git remote add equiterre dokku@dev.fixrs.dev:pierrepaul-eth || true
             git fetch --unshallow origin
             git push pierrepaul master:master -f
