moving things around

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/checkout@master
       - name: Push to prod server
         run: | 
+            mkdir -p ~/.ssh/
             ssh-keyscan -t rsa dev.fixrs.dev > ~/.ssh/known_hosts
             git remote add equiterre dokku@dev.fixrs.dev:pierrepaul-eth || true
             git fetch --unshallow origin
