--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@nuxt/content": "^1.14.0",
     "@nuxtjs/vuetify": "^1.11.3",
+    "@nuxtjs/i18n": "^7.2.0",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
-    "nuxt-i18n": "^6.27.1",
     "sass": "~1.32.6"
   },
   "resolutions": {
