--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: on-failure
     ports:
       - "3000:3000"
-    command: "yarn run dev"
+    command: bash -c "yarn && yarn run dev"
     volumes:
       - ./:/src
       - /src/node_modules
