--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,6 +16,6 @@ jobs:
         run: |
             mkdir -p ~/.ssh/
             ssh-keyscan -t rsa dev.fixrs.dev > ~/.ssh/known_hosts
-            git remote add pierrepaul dokku@dev.fixrs.dev:pierrepaul
+            git remote add pierrepaul dokku@pierre-paul.com:pierrepaul
             git fetch --unshallow origin
             git push pierrepaul main:master -f
