--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Push to prod server
         run: |
             mkdir -p ~/.ssh/
-            ssh-keyscan -t rsa dev.fixrs.dev > ~/.ssh/known_hosts
+            ssh-keyscan -t rsa pierre-paul.com > ~/.ssh/known_hosts
             git remote add pierrepaul dokku@pierre-paul.com:pierrepaul
             git fetch --unshallow origin
             git push pierrepaul main:master -f
